--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -18,7 +18,40 @@ body {
 }
 
 /* == Layout == */
+
+h1 {
+    text-align: center;
+    background: #000000;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+h2 {
+    text-align: center;
+    display: block;
+}
+
+main {
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.intro-text {
+    background: #000000;
+    color: white;
+    font-size:  0.75em;
+}
+
+#container {
+    width: ;
+    height: ;
+    position: absolute;
+    top: 1.30svh;
+    right: 0%;
+}
+
 /* == Header == */
+
 /* == Logo == */
 /* == Footer == */
 /* == Home & Quiz == */
