--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -52,7 +52,18 @@ main {
 
 /* == Header == */
 
+header {
+    width: 100%;
+    background-color: #000000;
+}
 /* == Logo == */
+
+.logo {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: white;
+}
 /* == Footer == */
 /* == Home & Quiz == */
 /* == Game Area == */
