--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -43,8 +43,8 @@ main {
 }
 
 #container {
-    width: ;
-    height: ;
+    width: 3rem;
+    height: 3rem;
     position: absolute;
     top: 1.30svh;
     right: 0%;
