--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,17 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* == navbar ==*/
+
+
 /* == Backgrounds == */
 
 body {
     display: flex;
     flex-direction: column;
-    background-image: url('');
+    background-color: #000000;
+    /*background-image: url('');*/
     background-size: cover;
     min-height: 100dvh;
     overflow: hidden;
@@ -53,7 +58,7 @@ main {
 /* == Header == */
 
 header {
-    width: 100%;
+    width: 50%;
     background-color: #000000;
 }
 /* == Logo == */
@@ -73,9 +78,10 @@ footer {
     bottom: 0;
     width: 100%;
     font-family: sans-serif;
-    font-size: 0.75rem;
+    font-size: 1rem;
     text-align: center;
     color: white;
+    padding: 0.5rem 1rem;
     background-color: #000000;
     border-top: 1px solid #fff;
     z-index: 3;
@@ -131,6 +137,11 @@ footer {
     margin: 0 auto;
     background: #fff;
     color: #000000;
+    border: 1px solid #000000;
+    padding: 0.5rem;
+    width: 12rem;
+    height: 2.5rem;
+    font-family: sans-serif;
     z-index: 1;
     position: relative;
     outline: none;
