--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ footer {
     padding: 0.5rem 1rem;
     background-color: #000000;
     border-top: 1px solid #fff;
-    z-index: 3;
+    margin-top: 3rem;
 }
 
 .note-div {
@@ -151,6 +151,7 @@ footer {
     align-items: center;
     justify-content: center;
     margin-top: -3rem;
+    margin-bottom: 1rem;
 }
 
 .game-start {
