--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,26 +13,31 @@
 
 header {
     width: 100%;
-    background-color: #000000;
+    background-color: #00000010;
+    display: flex;
+    justify-content: center;
 }
 
 .nav-bar {
     width: 50%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.nav-item a {
+    padding: 0.5rem;
+    margin-left: 0.7rem;
 }
 
 .logo {
     display: flex;
     flex-direction: row;
-    height: 15rem;
+    height: 3rem;
     width: auto;
     border: none;
     border-radius: 50%;
-    margin-left: 10rem;
-    margin-top: 1rem;
 }
 
 /* == Backgrounds == */
@@ -122,8 +127,7 @@ footer {
     width: 80%;
     height: auto;
     max-width: 100%;
-    margin-top: -15rem;
-    margin-left: 7rem;
+    margin-top: -2rem;
 }
 
 .intro-container {
@@ -289,6 +293,15 @@ footer {
 /* == Sounds == */
 /* == Media Queries == */
 @media screen and (max-width: 760px) {
+    .nav-bar{
+        width: 80%;
+        padding-top: 0.2rem;
+    }
+    
+    .nav-item a {
+        margin-left: 0;
+    }
+    
     .welcome-image {
         margin-top: 0;
     }
