--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+p, h1, h2, h3 {
+    font-family: "Noto Sans", sans-serif;
+}
+
 /* == Header == */
 
 header {
@@ -348,7 +352,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1238px;
-    margin: 0 auto 20px;
+    margin: 0 auto 120px;
 }
 
 .team-card {
@@ -367,12 +371,14 @@ footer {
     margin-bottom: 20px;
 }
 
-.team-card h2 {
+.team-card h3 {
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .team-card a {
     color: #EEE5E9;
+    font-family: "Noto Sans", sans-serif;
 }
 
 /* == Media Queries == */
