--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ footer {
 
 .intro-text {
     background-color: #000000;
-    font-family: sans-serif;
+    font-family:"Noto sans" sans-serif;
 }
 
 /* == Start Game Button & 404 Button == */
@@ -261,6 +261,11 @@ footer {
     margin: 1rem 0;
 }
 
+.play-audio {
+    background-color: transparent;
+    border: none;
+}
+
 .play-audio-btn {
     color: #c0c0c0;
     background-color: #FFD700;
@@ -268,6 +273,11 @@ footer {
     border: none;
     border-radius: 50%;
     margin: 1rem;
+    transition: transform 0.2s ease;
+}
+
+.play-audio-btn:hover {
+    transition: transform 0.2s ease
 }
 
 /* Hide the default radio button */
