--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,13 +245,24 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 0.5rem;
     color: #fff;
 }
 
 .quiz-container h1 {
-    margin: 20px auto;
+    font-family: "Lugrasimo", serif;
+    font-size: xx-large;
+    letter-spacing: 1.5px;
+    margin: 0.5rem auto;
     background: none;
+    color: #c0c0c0;
+}
+
+.quiz-container p {
+    font-family: "Noto sans", sans-serif;
+    letter-spacing: 1.5px;
+    padding-bottom: 0.5rem;
+    color: #c0c0c0;
 }
 
 .options-container {
@@ -267,12 +278,13 @@ footer {
 }
 
 .play-audio-btn {
-    color: #c0c0c0;
+    color: #a7a5a5;
     background-color: #FFD700;
     font-size: 3rem;
     border: none;
     border-radius: 50%;
     margin: 1rem;
+    box-shadow: 0 0 12px #cce481;
     transition: transform 0.2s ease box-shadow 0.2s ease text-shadow 0.2s ease;
 }
 
@@ -352,8 +364,8 @@ footer {
 
 /* When the radio button is checked, change the label's background and text color */
 .options-container input[type="radio"]:checked + label {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #11147a;
+    color: #d6d5d5;
 }
 
 /* Add a hover effect to the labels */
@@ -377,13 +389,13 @@ footer {
 /* Feedback message */
 .feedback {
     min-height: 2rem; /* Reserve space for feedback, but don't let it grow */
-    margin: 1rem 0;
     font-size: 1.2rem;
+    font-family: "Noto sans", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 2.5rem;
+    height: 2rem;
 }
 
 /* Replay Options*/
