--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,7 +457,26 @@ footer {
 
 /* == Media Queries == */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+    .quiz-container h1 {
+        font-size: large;
+        margin: 0 auto;
+    }
+
+    .quiz-container p {
+        padding-bottom: 0;
+        margin: 0 0.7rem;
+    }
+
+    .next-btn {
+        margin-top: 0.2rem;
+    }
+
+    .option-button {
+        width: 21rem;
+        height: 3.2rem;
+    }
+
     .nav-bar {
         width: 80%;
         padding-top: 0.2rem;
