amend footer size for media query max-width 767px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,10 @@ footer {
     .btn-game {
         margin-top: 1rem;
     }
+
+    footer {
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 1020px) {
