add nav styling, reduce logo size and link sizes for max-width 767px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,12 @@ footer {
     
     .nav-item a {
         margin-left: 0;
+        font-size: medium;
+    }
+
+    .logo {
+        height: 2rem;
+        margin-right: 3rem;
     }
     
     .welcome-image {
