add styling to 404 button and h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,6 +474,26 @@ footer {
     margin-top: 10px;
 }
 
+/* == 404 Page == */
+.msg-container {
+    align-items: center;
+    align-content: center;
+}
+
+.msg-container a {
+    margin-top: 5rem;
+}
+
+.msg-container h1{
+    color: white;
+    background: transparent;
+    font-family: "Lugrasimo", serif;
+    font-size: medium;
+    margin-top: 2rem;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 /* == Media Queries == */
 
 @media screen and (max-width: 767px) {
