--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,12 @@ footer {
     margin: 1rem 0;
 }
 
+.mute-btn {
+    background-color: #C0C0C0;
+    border-radius: 30%;
+    padding: 3px;
+}
+
 /* == Restart Quiz Button == */
 
 /* Team Page */
