--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ footer {
     background-color: #FFD700;
     font-size: 3rem;
     border: none;
-    border-radius: 50%;
+    border-radius: 50px;
     margin: 1rem;
     box-shadow: 0 0 12px #cce481;
     transition: transform 0.2s ease box-shadow 0.2s ease text-shadow 0.2s ease;
@@ -344,10 +344,22 @@ footer {
 
 .play-audio-btn:hover {
     transform: scale(1.10);
-    box-shadow: 0 0 5px 2px #ffffff;
+    box-shadow: 0 -1px 5px 2px #ffffff;
     background-color: #c0c0c0;
     text-shadow: 0 0 1px #fff;
     color: #11147a;
+}
+
+.play-text {
+    font-size: x-large;
+    font-family: "Noto sans", sans-serif;
+    color: #c0c0c0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+    text-shadow: 2px -3px 5px #FFD700;
 }
 
 /* Hide the default radio button */
