--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ main {
 
 .description {
     text-align: center;
+    margin-top: 5px;
     color: #d8a408;
 }
 
@@ -167,7 +168,7 @@ footer {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Close button (X) */
+
 .close {
     position: absolute;
     top: 10px;
@@ -196,6 +197,23 @@ footer {
     width: 80%;
     height: auto;
     max-width: 100%;
+}
+
+/* Dictionary meaning */
+.meaning {
+    text-align: left;
+    font-size: xx-small;
+    color: #c0c0c0;
+    margin-top: 5px;
+    margin-bottom: 0;
+    margin-left: 30px;
+    margin-right: 0;
+    margin-top: 0;
+}
+
+.welcome-container img {
+    display: block; 
+    margin-bottom: 5px; 
 }
 
 .intro-container {
