fixed progress bar for these two

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,7 +540,7 @@ p.hint-text {
 }
 
 #past-scores {
-    font-family: "Noto sans", sans-serif;ßß
+    font-family: "Noto sans", sans-serif;
 }
 
 /* Feedback message */
