--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ footer {
 
 .intro-text {
     background-color: #000000;
-    font-family: "Noto sans"sans-serif;
+    font-family: "Noto sans", sans-serif;
 }
 
 /* == Start Game Button & 404 Button == */
@@ -380,7 +380,7 @@ footer {
     border-radius: 50px;
     margin: 1rem;
     box-shadow: 0 0 12px #cce481;
-    transition: transform 0.2s ease box-shadow 0.2s ease text-shadow 0.2s ease;
+    transition: transform 0.2s ease;
 }
 
 .play-audio-btn:hover {
@@ -468,15 +468,15 @@ footer {
 .next-btn:hover {
     transform: scale(1.05);
     background-color: #dde83a;
-    box-shadow: 0 0 15px #c0c0c090;
-    text-shadow: 0 0 3px rgba(22, 34, 44, 0.2 inset);
+    box-shadow: inset 0 0 15px #c0c0c090;
+    text-shadow: 0 0 3px rgba(22, 34, 44, 0.2);
 }
 
 .next-btn:focus {
     outline: 2px solid rgb(28, 72, 110);
     background-color: #dde83a;
-    box-shadow: 0 0 15px #c0c0c0bc;
-    text-shadow: 0 0 3px rgba(22, 34, 44, 0.2 inset);
+    box-shadow: inset 0 0 15px #c0c0c0bc;
+    text-shadow: 0 0 3px rgba(22, 34, 44, 0.2);
 }
 
 .hint-btn {
